Add error banner

--- a/src/View/VueEntrypoint.html
+++ b/src/View/VueEntrypoint.html
@@ -6,7 +6,7 @@
     <meta charset='utf-8' />
     <meta name='viewport' content='width=device-width, height=device-height, initial-scale=1' />
 </head>
-<body id='app'>
+<body id='app' class="bg-slate-900 text-white">
 <script src='/dist/main.min.js'></script>
 </body>
 </html>
