Remove mobile overscroll bounce

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+    overscroll-behavior: none;
+}
+
 html, body, main {
     margin: 0;
     padding: 0;
