--- a/src/View/VueEntrypoint.html
+++ b/src/View/VueEntrypoint.html
@@ -2,11 +2,11 @@
 <html lang='en'>
 <head>
     <title>Monster DB</title>
-    <link rel='stylesheet' type='text/css' href='/dist/style.min.css' />
-    <meta charset='utf-8' />
-    <meta name='viewport' content='width=device-width, height=device-height, initial-scale=1' />
+    <link rel='stylesheet' type='text/css' href='/dist/style.min.css'/>
+    <meta charset='utf-8'/>
+    <meta name='viewport' content='width=device-width, height=device-height, initial-scale=1'/>
 </head>
-<body id='app' class="bg-slate-900 text-white">
+<body id="app" class="bg-slate-900 text-white h-screen">
 <script src='/dist/main.min.js'></script>
 </body>
 </html>
